--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-    "editor.formatOnSave": false,
+    "editor.formatOnSave": true,
     "editor.minimap.enabled": false,
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": true
-    }
+    },
+    "editor.tabSize": 2
 }
